@@ -1,6 +1,6 @@
-## CentOS 7 with AEM
+## Debian with AEM SDK 2023.1.10912
 
-[![build_status](https://github.com/aem-design/docker-aem/workflows/build/badge.svg?branch=master)](https://github.com/aem-design/docker-aem/actions?query=workflow%3Abuild+branch%3Amaster)
+[![build_status](https://github.com/aem-design/docker-aem/workflows/build/badge.svg?branch=sdk-2023.1.10912)](https://github.com/aem-design/docker-aem/actions?query=workflow%3Abuild+branch%3Asdk-2023.1.10912)
 [![github license](https://img.shields.io/github/license/aem-design/aem)](https://github.com/aem-design/aem) 
 [![github issues](https://img.shields.io/github/issues/aem-design/aem)](https://github.com/aem-design/aem) 
 [![github last commit](https://img.shields.io/github/last-commit/aem-design/aem)](https://github.com/aem-design/aem) 
@@ -9,54 +9,15 @@
 [![docker pulls](https://img.shields.io/docker/pulls/aemdesign/aem)](https://hub.docker.com/r/aemdesign/aem) 
 [![github release](https://img.shields.io/github/release/aem-design/aem)](https://github.com/aem-design/aem)
 
-This is docker image based on CentOS 7 with Tini
+This is docker image based on CentOS 8 with Tini
 One image that can be used for both Author and Publish nodes
 No license is included, you will need to register when starting up
 
-### Container Version to Branch Mapping
+### AEM Version
 
-Following is description of container contents based on branch names
+Folling base version of AEM jar used for this image, additional packages installed in separate branches.
 
-* 6.5.0 - base aem version without any packages
-* 6.5.0-bundle - base aem version with typical packages
-* 6.5.1.0 - base aem version with Service Pack 1
-* 6.5.1.0-bundle - base aem version with Service Pack 1 and typical packages
-* 6.5.1.0-bundle-forms - base aem version with Service Pack 1, typical packages and forms 
-
-### Typical Packages
-
-These are typical packages that are included in bundled containers
-
-| File | Notes  |
-| ---  | ---    |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
-| acs-aem-commons-content-4.3.2.zip | acs commons |
-| core.wcm.components.all-2.6.0.zip | adobe corecomponents |
-| accesscontroltool-package-2.3.2.zip | netcentric acl tools |
-| accesscontroltool-oakindex-package-2.3.2.zip | netcentric acl tools |
-| vanityurls-components-1.0.2.zip | vanity url servlet |
-| aemdesign-aem-core-deploy-{LATEST}.zip | aem design core |
-| aemdesign-aem-support-deploy-{LATEST}.zip | aem design showcase content |
-| brightcove_connector-{LATEST}.zip | bright cove package |
-
-Packages that have `{LATEST}` mean that when the container is built it will pull the latest version available in git repository. 
-
-### Service Pack Packages
-
-This is a typical service pack that is added to container
-
-| File | Notes  |
-| ---  | ---    |
-| AEM-6.5.1.0-6.5.1.zip | sp 1 |
-
-### Forms Packages
-
-This is a typical form and forms service pack that is added to container
-
-| File | Notes  |
-| ---  | ---    |
-| aem-compat-cq65-to-cq64-0.18.zip | aem forms backwards compatibility |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
+Version: SDK
 
 
 ### Environment Variables
@@ -65,10 +26,10 @@ Following environment variables are available
 
 | Name              | Default Value                 | Notes |
 | ---               | ---                           | ---   |
-| AEM_VERSION       | "6.5.0"   | only used during build  |
-| AEM_JVM_OPTS      | "-server -Xms1024m -Xmx1024m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0"   |  |
+| AEM_VERSION       | "aem-sdk-2023.1.10912.20230130T173736Z-230100"   | only used during build  |
+| AEM_JVM_OPTS      | "-server -Xms1024m -Xmx1024m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0" -XX:+UseParallelGC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning  |  |
 | AEM_START_OPTS    | "start -c /aem/crx-quickstart -i launchpad -p 8080 -a 0.0.0.0 -Dsling.properties=conf/sling.properties" |  |
-| AEM_JARFILE       | "/aem/crx-quickstart/app/cq-quickstart-${AEM_VERSION}-standalone-quickstart.jar" |  |
+| AEM_JARFILE       | "/aem/crx-quickstart/app/cq-quickstart-cloudready-${AEM_VERSION}-standalone-quickstart.jar" |  |
 | AEM_RUNMODE       | "-Dsling.run.modes=author,crx3,crx3tar,nosamplecontent" |  |
 
 
@@ -94,51 +55,23 @@ Following Ports are exposed
 | 57346 | debug |
 
 
+### Packages in Bundled
+
+Following bundles are added to container
+
+| File | Notes  |
+| ---  | ---    |
+|  |  |
+
+
+
 ### Starting
 
-To start local demo AEM 6.5 instance on port 4502
+To start author run the following
 
 ```bash
-docker run --name author \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--p4502:8080 -d \
--p30303:58242 -d \
-aemdesign/aem
+docker run --name author-sdk-2023-1-10912 -e "TZ=Australia/Sydney" -e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,localdev" -e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n -XX:+UseParallelGC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning" -p4502:8080 -p30303:58242 -d aemdesign/aem:sdk-2022.4.7138
 ``` 
 
-To start local demo AEM 6.4 instance on port 4512
-
-```bash
-docker run --name author64 \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--p4512:8080 -d \
--p30313:58242 -d \
-aemdesign/aem:6.4.0
-``` 
-
-To start local demo AEM 6.5 instance on port 4565 with Bundled Packages run the following
-
-```bash
-docker run --name author65bundle \
--e "TZ=Australia/Sydney" \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n" \
--p4565:8080 -d \
--p30364:58242 -d \
-aemdesign/aem:6.5.0-bundle
-``` 
-
-
-To start local demo AEM 6.4 instance on port 4564 with Bundled Packages run the following
-
-```bash
-docker run --name author64bundle \
--e "TZ=Australia/Sydney" \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n" \
--p4564:8080 -d \
--p30364:58242 -d \
-aemdesign/aem:6.4.0-bundle
-``` 
 
 
